Fixed z-index

--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@
     width: 15vw;
     max-height: 4vw;
     max-width: 15vw;
+    z-index: 4;
     background-color: lavender;
 }
 
@@ -137,7 +138,7 @@
     display: inline-block;
     bottom: 1vw;
     right: 1vw;
-    z-index: 1;
+    z-index: 5;
     background-color: rgb(0, 114, 178);
 }
 
@@ -147,7 +148,7 @@
     right: 1vw;
     height: 40vw;
     width: 25vw;
-    z-index: 500;
+    z-index: 6;
 }
 
 #feedback {
